deployment-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aspath
  name: redis
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:6.2.1-alpine
        ports:
        - name: timescale-tcp1
          containerPort: 8070
          protocol: TCP
        - name: timescale-tcp2
          containerPort: 8071
          protocol: TCP
        - name: timescale-tcp3
          containerPort: 6379
          protocol: TCP
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
          requests:
            cpu: 500m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: aspath
  labels:
    app: redis
spec:
  ports:
  - port: 8070
    name: redis-tcp-8070
  - port: 8071
    name: redis-tcp-8071
  - port: 6379
    name: redis-tcp-6379
  selector:
    app: redis
  sessionAffinity: "ClientIP"
