ingress-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: aspath
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - aspath.yourdomain.tld
    secretName: secretName-prod 
  rules:
    - host: aspath.yourdomain.tld
      http:
        paths:
          - path: /
            backend:
              serviceName: aspath-frontend
              servicePort: 8080
